# llm-text-generation

./: .gitignore  Dockerfile  Dockerfile.old  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: server.yaml  wikidata-simple.yaml
configs/chat_templates/: default.yaml  gemma-2.yaml  llama-3.x.yaml  llama-3.yaml  mistral.yaml  phi-3.yaml  qwen2.yaml
configs/data/: wikidata-finetuning.yaml  wikidata-pretraining.yaml  wikidata-simple.yaml
configs/models/: gemma-2.yaml  gpt2.yaml  llama-2.yaml  llama-3.x.yaml  llama-3.yaml  llama.yaml  mistral.yaml  phi-3.yaml  qwen-2.5.yaml  qwen-2.yaml  t5.yaml
configs/postprocessings/: clip.yaml
configs/preprocessings/: decode_input.yaml
configs/tokenizers/: bert-uncased.yaml  gemma-2.yaml  gpt2.yaml  gpt2_train.yaml  llama-2-eos.yaml  llama-2.yaml  llama-3-eos.yaml  llama-3.x.yaml  llama-3.yaml  llama_train.yaml  mistral.yaml  mistral_train.yaml  phi-2.yaml  phi-3-eos.yaml  phi-3.yaml  qwen-2.5.yaml  qwen-2.yaml  qwen2.yaml  roberta.yaml  t5.yaml  t5_output.yaml
configs/tokenizers/llama-2/: tokenizer.json  tokenizer_config.json
configs/tokenizers/phi-3/: added_tokens.json  tokenizer_config.json
configs/tokenizers/qwen-2.5/: special_tokens_map.json  tokenizer_config.json
configs/tokenizers/qwen2/: tokenizer_config.json
demos/natural_entity_types/: evaluate.py  examples.tsv  mini_benchmark.test.tsv  mini_benchmark.train.tsv  run.py  test.tsv  utils.py
demos/text_matching/: run.py  test.tsv  utils.py
examples/: reasoning_prompt.txt  reasoning_regex.txt  request.json  response.json  sparql_prompt.txt  sparql_regex.txt  template_prompt.txt  template_regex.txt
examples/alt_text_matching/: prompt1.txt  prompt2.txt  regex.txt
examples/json/: regex.txt
examples/json_cfg/: prompt.txt
examples/patient_records/: record1.txt  record2.txt  record3.txt  regex.txt
examples/patienten_befunde/: antwort1.txt  antwort2.txt  antwort3.txt  befund1.txt  befund2.txt  befund3.txt  regex.txt
examples/reasoning/: prompt.txt  regex.txt
examples/sparql/: regex.txt
models/gpt2/: gpt2.yaml  info.yaml
models/llama-2/: llama-2.yaml
models/llama-3-70b/: llama-3.yaml
models/llama-3-8b/: info.yaml  llama-3.yaml
models/llama-3-8b-instruct/: llama-3.yaml
models/mistral/: info.yaml  mistral.yaml
models/mistral-7b/: info.yaml  mistral.yaml
models/mistral-7b-instruct/: mistral.yaml
models/mixtral/: mixtral.yaml
models/mixtral-8x22b/: mixtral.yaml
models/mixtral-8x22b-4bit/: info.yaml  mixtral.yaml
models/mixtral-8x7b/: mixtral.yaml
models/mixtral-8x7b-8bit/: mixtral.yaml
models/mixtral-8x7b-instruct/: mixtral.yaml
models/phi-2/: info.yaml  phi-2.yaml
models/phi-3-instruct/: info.yaml  phi-3.yaml
models/qwen-2/: info.yaml  qwen2.yaml
models/qwen-2-instruct/: qwen2.yaml
models/qwen-2.5/: info.yaml  qwen-2.5.yaml
models/qwen-2.5-instruct/: qwen-2.5.yaml
models/qwen2/: qwen2.yaml
models/qwen2-instruct/: qwen2.yaml
scripts/: evaluate.py  export_experiment.py  extract_sparql.py  prepare_data.py  prepare_wikidata_query_logs.py  test.sh  train.sh
src/llm_text_generation/: __init__.py  model.py
(+22 files in other folders)
