[project]
name = "llm_text_generation"
version = "0.1.1"
description = "Run large language models."
authors = [
    { name = "Sebastian Walter", email = "swalter@cs.uni-freiburg.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

keywords = ["nlp", "text", "llm"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
]

dependencies = [
    "dtpu==0.6.0",
    "transformers>=4.46.0",
    "peft>=0.11.0",
    "braceexpand>=0.1.7",
    "grammar-utils>=0.1.0",
    # for fast api websockets
    "websockets>=14.0",
]

[project.scripts]
"llm-gen" = "llm_text_generation.api.cli:main"

[project.urls]
Github = "https://github.com/bastiscode/llm-text-generation"

[tool.distutils.bdist_wheel]
universal = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
